# knowledge_base_public

./: Architectural Patterns and Tooling for Metadata-Driven Text-to-SQL RAG Systems.md  Building Streamlit Chatbot with Copilot.md  Development Guide for a Grounded Natural-Language-to-SQL Python Tool Using LangChain and GitHub Copi.md  Email Marketing Holdout Attribution Innovations.md  Productboard - Voice of Customer CPO Book  README.md  Recreating Deep Research in Claude Code.md  Recursive_Deep_Research.md  claude_code_cli_gpt_pro.py
claude_code_cli_mega_claude/: 01_hello_world.py  14_advanced_options.py  README.md  __init__.py  client.py  errors.py  models.py  options.py
claude_code_cli_mega_gpt/: README.md  pyproject.toml
claude_code_cli_mega_gpt/claude_code_cli/: __init__.py  client.py  errors.py  models.py  schema.py
claude_code_cli_opus46/: README.md  __init__.py  client.py  errors.py  models.py  schema.py
claude_code_cli_opus46/claude_code_wrapper_opus46_examples/: 01_hello_world.py  02_text_mode_and_shorthand.py  03_piping_stdin.py  04_streaming.py  05_system_prompt_and_model.py  06_json_schema_raw.py  07_query_model_dataclass.py  08_enums_and_constraints.py  09_error_handling.py  10_conversation_continuity.py  11_tools_and_permissions.py  12_subagents.py  13_codebase_analysis_pipeline.py  README.md
