[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-code-cli"
version = "0.1.0"
description = "Python wrapper for the Claude Code CLI (claude -p)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["claude", "anthropic", "cli", "ai", "code"]

[project.urls]
Homepage = "https://github.com/example/claude-code-cli"

[tool.setuptools.packages.find]
include = ["claude_code_cli*"]
